--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('websitewall.jpg');
+  background-image: url('websitewall.JPG');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
